# Job-Finder

./: .gitignore  AGENTS.md  LICENSE  PROJECT_OVERVIEW.md  README.md  app.py  cycle_runner.py  maintenance_runner.py  notifier.py  preflight_runner.py  scraper.py  self_test_runner.py  tmpclaude-6e1c-cwd
.github/workflows/: job_scout.yml
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: commands.rs  main.rs  models.rs
data/: jobs.db
docs/: architecture.md  data.json  index.html
ops/: bootstrap_and_verify.ps1  deploy_local.ps1  local_stack_status.ps1  recreate_venv.ps1  register_cycle_task.ps1  register_maintenance_task.ps1  run_cycle.ps1  run_dashboard.ps1  run_maintenance.ps1  run_scraper_api.ps1  run_self_test.ps1  silent_launch.vbs  stop_local_stack.ps1  unregister_cycle_task.ps1  unregister_maintenance_task.ps1
services/scraper/: .env.example  README.md  requirements.txt
services/scraper/app/: __init__.py  config.py  db.py  main.py  maintenance.py  models.py  preflight.py  ranking.py  runner.py  schemas.py  self_test.py  smoke.py
services/scraper/app/scrapers/: __init__.py  adzuna.py  arbeitnow.py  arc_dev.py  base.py  builtin.py  careerjet.py  cutshort.py  dice.py  flexjobs.py  foundit.py  freshersworld.py  glassdoor.py  himalayas.py  hirect.py  hirist.py  indeed.py  internshala.py  it_org_careers.py  jobgether.py  jobicy.py  jooble.py  just_remote.py  linkedin.py  naukri.py  platform_stubs.py  relocate_me.py  remote_co.py  remote_ok.py  remotive.py  shine.py  simplyhired.py  (+8 more)
templates/: dashboard.html
