[package]
name = "ajh-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
